Added Interaction Unit Tests

--- a/main/Assets/Tests/PlayMode/Tests.asmdef
+++ b/main/Assets/Tests/PlayMode/Tests.asmdef
@@ -5,7 +5,8 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "Unity.InputSystem",
-        "ScriptsDef"
+        "ScriptsDef",
+        "Items"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
